unpackaged/main/default/objects/Opportunity/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>If sequential liability is true then both the media agency and the advertiser need to pass account approval.
Else the advertiser only need to pass the clean step.</description>
    <formula>IF(
   Account.Account_Status__c == &#39;APPROVED&#39;,
   &quot;Approved&quot;,
   &quot;Check Account&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>