unpackaged/main/default/objects/Opportunity/fields/DFP_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>DFP_Team_Id__c</fullName>
    <externalId>true</externalId>
    <label>DFP Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>