unpackaged/main/default/objects/Opportunity/fields/Discount_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Discount_Remarks__c</fullName>
    <description>This field is for Salesperson to input remarks/justification for Discount Approval</description>
    <inlineHelpText>Specify the justifications/remarks for discount approvers</inlineHelpText>
    <label>Discount Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>