unpackaged/main/default/objects/Opportunity/fields/Early_Bird__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird__c</fullName>
    <formula>AND(
TEXT(Account.Status__c) = &quot;Active&quot;, 
MONTH(Account.Subscription_End_Date__c) = MONTH(ADDMONTHS(TODAY(),1)), YEAR(Account.Subscription_End_Date__c) =  YEAR(ADDMONTHS(TODAY(),1))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Bird</label>
    <type>Checkbox</type>
</CustomField>