unpackaged/main/default/objects/Opportunity/fields/Eligible_Account_For_Channel_Sales__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Account_For_Channel_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligible Account For Channel Sales</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Eligible Account For Channel Sales)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>