unpackaged/main/default/objects/Opportunity/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End User)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>