unpackaged/main/default/objects/Opportunity/fields/EPT_Product_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>EPT_Product_Max_Discount__c</fullName>
    <description>Gets the Max discount amongst EPT Products.  Will be used in Approvals</description>
    <label>EPT Product Max Discount</label>
    <summarizedField>OpportunityLineItem.Discounted__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>EPT</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>