unpackaged/main/default/objects/Opportunity/fields/Events_Product_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Events_Product_Max_Discount__c</fullName>
    <description>Gets the Max discount amongst Events Products.  Will be used in Approvals</description>
    <label>Events Product Max Discount</label>
    <summarizedField>OpportunityLineItem.Discounted__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>Events</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>