unpackaged/main/default/objects/Opportunity/fields/Exclude_from_Spending_at__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Spending_at__c</fullName>
    <formula>ADDMONTHS( CloseDate ,12 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from Spending at :</label>
    <type>Date</type>
</CustomField>