unpackaged/main/default/objects/Opportunity/fields/Expired_Offer_Duration__c.field-meta.xml
<CustomField>
    <fullName>Expired_Offer_Duration__c</fullName>
    <formula>CreatedDate  + IF(Country__c=&quot;Singapore&quot;, $CustomMetadata.Country_Attribute__mdt.Singapore.Expired_Hours_Before_Ready_for_Payment__c/24,  IF(Country__c=&quot;Malaysia&quot;, $CustomMetadata.Country_Attribute__mdt.Malaysia.Expired_Hours_Before_Ready_for_Payment__c/24,   IF(Country__c=&quot;Thailand&quot;, $CustomMetadata.Country_Attribute__mdt.Thailand.Expired_Hours_Before_Ready_for_Payment__c/24,   IF(Country__c=&quot;Indonesia&quot;, $CustomMetadata.Country_Attribute__mdt.Indonesia.Expired_Hours_Before_Ready_for_Payment__c/24, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Offer Duration</label>
    <type>DateTime</type>
</CustomField>