unpackaged/main/default/objects/Opportunity/fields/Final_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_Collected__c</fullName>
    <formula>Total_Amount__c  -  Conversion_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>