unpackaged/main/default/objects/Opportunity/fields/From_Button__c.field-meta.xml
<CustomField>
    <fullName>From_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Button</label>
    <type>Checkbox</type>
</CustomField>