unpackaged/main/default/objects/Opportunity/fields/From_Contract__c.field-meta.xml
<CustomField>
    <fullName>From_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (From Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>