unpackaged/main/default/objects/Opportunity/fields/Guruland_Link_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Guruland_Link_Created_Date__c</fullName>
    <label>Guruland Link Created Date</label>
    <type>DateTime</type>
</CustomField>