unpackaged/main/default/objects/Opportunity/fields/Guruland_Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>Guruland_Quote_Link__c</fullName>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>