unpackaged/main/default/objects/Opportunity/fields/In_House_Sales__c.field-meta.xml
<CustomField>
    <fullName>In_House_Sales__c</fullName>
    <label>Type of Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In House Sales</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Charitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>