unpackaged/main/default/objects/Opportunity/fields/Include_Subscription_Ext__c.field-meta.xml
<CustomField>
    <fullName>Include_Subscription_Ext__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Subscription Ext</label>
    <type>Checkbox</type>
</CustomField>