unpackaged/main/default/objects/Opportunity/fields/Invoice_From_Office__c.field-meta.xml
<CustomField>
    <fullName>Invoice_From_Office__c</fullName>
    <inlineHelpText>Please select the Spotify Legal entity which is closest to where you (sales) are located.</inlineHelpText>
    <label>Invoice From Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia Herzegovina</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Croatia</fullName>
            </value>
            <value>
                <fullName>Cyprus</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>ESTONIA</fullName>
            </value>
            <value>
                <fullName>FINLAND</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>GREECE</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>HONG KONG</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>ICELAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>