unpackaged/main/default/objects/Opportunity/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>