unpackaged/main/default/objects/Opportunity/fields/Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Timing__c</fullName>
    <description>Maps to SF_Invoice_Frequency in DSM</description>
    <inlineHelpText>Defines when the deal should be invoiced.  The DSM Billing Source options will be limited by the Invoice Frequency.  Prepayment must have a Billing Source of Contracted.</inlineHelpText>
    <label>Invoice Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>End of Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>