unpackaged/main/default/objects/Opportunity/fields/Is_Chipper__c.field-meta.xml
<CustomField>
    <fullName>Is_Chipper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChipper</label>
    <type>Checkbox</type>
</CustomField>