unpackaged/main/default/objects/Opportunity/fields/Is_Clone__c.field-meta.xml
<CustomField>
    <fullName>Is_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, record is cloned</description>
    <inlineHelpText>If True, record is cloned</inlineHelpText>
    <label>Is Clone</label>
    <type>Checkbox</type>
</CustomField>