unpackaged/main/default/objects/Opportunity/fields/is_Fulfilment_System_Notified__c.field-meta.xml
<CustomField>
    <fullName>is_Fulfilment_System_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if fulfilment system is notified</description>
    <inlineHelpText>Denotes if fulfilment system is notified</inlineHelpText>
    <label>is Fulfilment System Notified</label>
    <type>Checkbox</type>
</CustomField>