unpackaged/main/default/objects/Opportunity/fields/Is_Testing__c.field-meta.xml
<CustomField>
    <fullName>Is_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Testing</label>
    <type>Checkbox</type>
</CustomField>