unpackaged/main/default/objects/Opportunity/fields/isBulkUpdate__c.field-meta.xml
<CustomField>
    <fullName>isBulkUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field should be true when bulk purchase has been made</description>
    <label>isBulkUpdate</label>
    <type>Checkbox</type>
</CustomField>