unpackaged/main/default/objects/Opportunity/fields/LegalNote__c.field-meta.xml
<CustomField>
    <fullName>LegalNote__c</fullName>
    <description>Read only except S:Legal and S:Sys Admin</description>
    <inlineHelpText>Used by the Legal team to add additional Terms and Conditions that are specific to your account.  Added from the Account to the Legal Note on the Opportunity when Bill To button is pressed.  Transferred to the IO through DSM.</inlineHelpText>
    <label>Legal note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>