unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Payment</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Unable to reach (at least 5 attempts)</fullName>
            </value>
            <value>
                <fullName>Already Renewed/Purchased/Registered/Bosted</fullName>
            </value>
            <value>
                <fullName>Already Renewed - VIP</fullName>
            </value>
            <value>
                <fullName>Payment Expired</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Project Abandoned</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>DO NOT CALL list</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Agent is suspended or cancelled</fullName>
            </value>
            <value>
                <fullName>Project Completed / Completing</fullName>
            </value>
            <value>
                <fullName>Project Delayed</fullName>
            </value>
            <value>
                <fullName>Decision Maker Uncontactable</fullName>
            </value>
            <value>
                <fullName>Current System Sufficient</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>