unpackaged/main/default/objects/Opportunity/fields/Loss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Detail__c</fullName>
    <inlineHelpText>Please provide details in the Loss Reason Detail field. eg. Name of Competitor.</inlineHelpText>
    <label>Loss Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>