unpackaged/main/default/objects/Opportunity/fields/Lost_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Sub_Reason__c</fullName>
    <label>Lost Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Don&#39;t need a subscription / product</fullName>
            </value>
            <value>
                <fullName>Agent will call back if keen on product</fullName>
            </value>
            <value>
                <fullName>Pricing/ Too Expensive</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Features are not attractive</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Unhappy with change of features</fullName>
            </value>
            <value>
                <fullName>Past Bad Customer Experience</fullName>
            </value>
            <value>
                <fullName>Not receiving leads</fullName>
            </value>
            <value>
                <fullName>Too many credits left</fullName>
            </value>
            <value>
                <fullName>Don&#39;t need so many concurrent listings</fullName>
            </value>
            <value>
                <fullName>Credits are not useful</fullName>
            </value>
            <value>
                <fullName>Not enough credits to boost</fullName>
            </value>
            <value>
                <fullName>Content is irrelevant</fullName>
            </value>
            <value>
                <fullName>Location is inaccessible</fullName>
            </value>
            <value>
                <fullName>Not available at the time slot</fullName>
            </value>
            <value>
                <fullName>Bad experience with our workshop / event</fullName>
            </value>
            <value>
                <fullName>Using STProp/SRX product</fullName>
            </value>
            <value>
                <fullName>Using 99.co product</fullName>
            </value>
            <value>
                <fullName>Using iProp product</fullName>
            </value>
            <value>
                <fullName>Using The Edge product</fullName>
            </value>
            <value>
                <fullName>With other competitors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>