unpackaged/main/default/objects/Opportunity/fields/Managerial_Approved__c.field-meta.xml
<CustomField>
    <fullName>Managerial_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managerial Approved</label>
    <type>Checkbox</type>
</CustomField>