unpackaged/main/default/objects/Opportunity/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temporary field for Market selection</description>
    <inlineHelpText>Temporary field for Market selection</inlineHelpText>
    <label>Market</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>