unpackaged/main/default/objects/Opportunity/fields/Media_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Media_Agency_Commission__c</fullName>
    <formula>Media_Agency2__r.Agency_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Agency Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>