unpackaged/main/default/objects/Opportunity/fields/Months_Included__c.field-meta.xml
<CustomField>
    <fullName>Months_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Included in Total Spending 12 months or not</description>
    <label>Months Included</label>
    <type>Checkbox</type>
</CustomField>