unpackaged/main/default/objects/Opportunity/fields/NetSuite_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Contract_Id__c</fullName>
    <label>NetSuite Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>