unpackaged/main/default/objects/Opportunity/fields/NetSuite_Contract_Term_del_from_packag__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Contract_Term_del_from_packag__c</fullName>
    <label>NetSuite Contract Term [del from packag]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>