unpackaged/main/default/objects/Opportunity/fields/Netsuite_Link__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Link__c</fullName>
    <formula>IF(isblank(NetSuite_Sales_Order__c),&quot;No link&quot;, HYPERLINK(&quot;https://system.netsuite.com/app/accounting/transactions/salesord.nl?&amp;id=&quot; &amp;  NetSuite_Sales_Order__c , &quot;Click Here&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Link</label>
    <type>Text</type>
</CustomField>