unpackaged/main/default/objects/Opportunity/fields/NetSuite_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Payment_Status__c</fullName>
    <label>NetSuite Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Partially Paid</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Fully Paid</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Partially Refunded</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Fully Refunded</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Credit Note Issued</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>