unpackaged/main/default/objects/Opportunity/fields/NetSuite_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Project_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>NetSuite Project Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>