unpackaged/main/default/objects/Opportunity/fields/NetSuite_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Renewal_Terms__c</fullName>
    <label>NetSuite Renewal Terms</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>