unpackaged/main/default/objects/Opportunity/fields/NetSuite_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sales_Order__c</fullName>
    <label>NetSuite Sales Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>