unpackaged/main/default/objects/Opportunity/fields/NS_Renewal_Transaction_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Renewal_Transaction_Internal_Id__c</fullName>
    <label>NS Renewal Transaction Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>