unpackaged/main/default/objects/Opportunity/fields/NSRenewal_Opportunity_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NSRenewal_Opportunity_Internal_Id__c</fullName>
    <label>NSRenewal Opportunity Internal Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>