unpackaged/main/default/objects/Opportunity/fields/Offline_Payment_Only__c.field-meta.xml
<CustomField>
    <fullName>Offline_Payment_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Payment Only</label>
    <type>Checkbox</type>
</CustomField>