unpackaged/main/default/objects/Opportunity/fields/Offline_Payment_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offline_Payment_Total_Amount__c</fullName>
    <label>Offline Payment Total Amount</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Opportunity_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>