unpackaged/main/default/objects/Opportunity/fields/OMC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>OMC_Approved_Date__c</fullName>
    <label>OMC Approved Date</label>
    <type>DateTime</type>
</CustomField>