unpackaged/main/default/objects/Opportunity/fields/OMC_Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>OMC_Submitted_Time__c</fullName>
    <description>Timestamp to indicate the most recent time that the Opportunity was submitted to OMC.</description>
    <label>OMC Submitted Time</label>
    <type>DateTime</type>
</CustomField>