unpackaged/main/default/objects/Opportunity/fields/OMC_Urgent__c.field-meta.xml
<CustomField>
    <fullName>OMC_Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMC Urgent</label>
    <type>Checkbox</type>
</CustomField>