unpackaged/main/default/objects/Opportunity/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <description>Opportunity Number</description>
    <displayFormat>OPP-{000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>This is an automatically generated number that can act as a key for other systems</inlineHelpText>
    <label>Opportunity Code</label>
    <type>AutoNumber</type>
</CustomField>